--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,10 @@
         "firebase/php-jwt": "^6.4",
         "robmorgan/phinx": "^0.13",
         "phpmailer/phpmailer": "^6.8",
-        "robthree/twofactorauth": "^3.0"
+        "robthree/twofactorauth": "^3.0",
+        "symfony/dom-crawler": "^6.3",
+        "symfony/css-selector": "^6.3",
+        "guzzlehttp/guzzle": "^7.8"
     },
     "autoload": {
         "psr-4": {
