Handel some additional APIs for the extension (Find and Update)

--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,23 @@
+# App Configuration
+APP_ENV=development
+APP_DEBUG=true
+APP_URL=http://localhost:8080
+
+# Database Configuration
 DB_HOST=localhost
 DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 DB_NAME=health_deals
 
+# Redis Configuration
+REDIS_PROTOCOL=rediss
+REDIS_HOST=localhost
+REDIS_PORT=6379
+
+# JWT Configuration
 JWT_SECRET=64_CHAR_SECRET_HERE
 MFA_SECRET=16_CHAR_SECRET_HERE
 
-APP_ENV=development
-APP_DEBUG=true
-APP_URL=http://localhost:8080
-
+# Gemini API Configuration
 GEMINI_API_KEY=GOOGLE_API_KEY_HERE
