Add featured images to blog posts

--- a/.env.example
+++ b/.env.example
@@ -21,3 +21,10 @@ MFA_SECRET=16_CHAR_SECRET_HERE
 
 # Gemini API Configuration
 GEMINI_API_KEY=GOOGLE_API_KEY_HERE
+
+# AWS S3 Configuration
+AWS_ACCESS_KEY_ID=YOUR_AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=YOUR_AWS_SECRET_ACCESS_KEY
+AWS_REGION=us-east-1
+AWS_S3_BUCKET=your-bucket-name
+AWS_S3_URL=https://your-bucket-name.s3.us-east-1.amazonaws.com
