--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "robthree/twofactorauth": "^3.0",
         "symfony/dom-crawler": "^6.3",
         "symfony/css-selector": "^6.3",
-        "guzzlehttp/guzzle": "^7.8"
+        "guzzlehttp/guzzle": "^7.8",
+        "aws/aws-sdk-php": "^3.300"
     },
     "autoload": {
         "psr-4": {
